fix: Adjusted footer layout and spacing

--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,3 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    color: #2e2f42;
-    background-color: #ffffff;
-}
 
 ul {
     list-style: none;
@@ -15,14 +10,18 @@ a {
 *::before,
 *::after {
     box-sizing: border-box;
-      
 }
-.container {
-    width: 1158px;
+      
+body {
+        font-family: 'Roboto', sans-serif;
+        color: #2e2f42;
+    }
+
+    .container {
+        width: 1158px;
         margin: 0 auto;
         padding: 0 15px;
-
-}
+    }
 .sr-only {
     position: absolute;
     white-space: nowrap;
