--- a/css/footer.css
+++ b/css/footer.css
@@ -1,30 +1,16 @@
-.section-footer {
-    background-color: #2e2f42;
-    color: #ffffff;    
-    gap: 0px;
+.footer {
+    background: #2e2f42;
+    color: #fff;
+    padding: 100px 0;
+}
+.logo {
+    color: #fff;
+    font-size: 24px;
 }
 
-.section-footer .logo {
-    color: #f4f4fd;
-    line-height: 1.33;
-    letter-spacing: 0.03em;
-}
-
-.section-footer .accent {
-    color: #4d5ae5;
-}
-
-.city-text {
-    color: #f4f4fd;
-    line-height: 1.5;
+.footer-text {
     font-size: 16px;
-    font-weight: 400;
+    line-height: 1.5;
     letter-spacing: 0.02em;
-}
-.foot {
-    gap: 0px;
-    padding: 100px 100px;
-    justify-content: flex-start;
-    align-items: center;
-
+    color: #fff;
 }
