--- a/css/hero.css
+++ b/css/hero.css
@@ -1,43 +1,18 @@
 .hero {
     background-color: #2e2f42;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #000000;
     padding: 188px 0;
-    
-
+    text-align: center;
 }
 
 .hero-title {
+    color: #fff;
     font-size: 56px;
-    font-weight: 700;
-    line-height: 1.07;
-    color: #ffffff;
-    letter-spacing: 0.02em;
-    width: 496px;
-    height: 120px;
-    
-
+    margin-bottom: 48px;
 }
 
 .hero-button {
-    background-color: #4d5ae5;
-    color: #ffffff;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    cursor: pointer;
+    background: #4d5ae5;
+    color: #fff;
     padding: 16px 32px;
-    text-align: center ;
-    margin-top: 48px;
-    border-radius: 4%;
-}
-
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #404bbf;
+    cursor: pointer;
 }
