--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,31 +1,9 @@
-.portfolio-title {
-    text-align: center;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
+portfolio {
+    padding: 120px 0;
 }
 
-.portfolio-name {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-}
-
-.portfolio-role {
-    color: #434455;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-
-}
-.portfolio {
-    padding: 120px 0px;
-    gap: 10px;
-}
-.portfolio ul {
+.portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    padding: 15px 0px;
-   
 }
