--- a/css/team.css
+++ b/css/team.css
@@ -1,43 +1,13 @@
-.section-team {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    background-color: #f4f4fd;
-    gap: 0px;
-    padding: 120px 0px;
+.team {
+    background: #f4f4fd;
+    padding: 120px 0;
 }
 
-.section-title {
-    text-align: center;
-    font-size: 36px;
-    letter-spacing: 0.02em;
-    line-height: 1.11;
-    display:flex;
-    justify-content: center;
-}    
-
-
-.team-name {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-}
-
-.team-role {
-    text-align: center;
-    color: #434455;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-item {
-    background-color: #ffffff;
-    
-}
-
-.section-team ul {
-    display: flex;
-    gap: 24px;
-    padding: 15px 0px;
+    background: #fff;
 }
